do not word wrap when removing trailing spaces

Thanks to Gerald for the detailed report!

FIXED-IN: 4.11.5
BUG: 328900